; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/btc/core/extr_btc_storage.c_btc_storage_remove_bonded_device.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/btc/core/extr_btc_storage.c_btc_storage_remove_bonded_device.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [34 x i8] c"Add to storage: Remote device:%s\0A\00", align 1
@BTC_STORAGE_LINK_KEY_TYPE_STR = common dso_local global i32 0, align 4
@BTC_STORAGE_PIN_LENGTH_STR = common dso_local global i32 0, align 4
@BTC_STORAGE_LINK_KEY_STR = common dso_local global i32 0, align 4
@BT_STATUS_SUCCESS = common dso_local global i32 0, align 4
@BT_STATUS_FAIL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @btc_storage_remove_bonded_device(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = load i32, i32* %3, align 4
  %7 = call i32 @bdaddr_to_string(i32* %5, i32 %6, i32 4)
  store i32 1, i32* %4, align 4
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @BTC_TRACE_DEBUG(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %8)
  %10 = call i32 (...) @btc_config_lock()
  %11 = load i32, i32* %3, align 4
  %12 = load i32, i32* @BTC_STORAGE_LINK_KEY_TYPE_STR, align 4
  %13 = call i64 @btc_config_exist(i32 %11, i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %21

15:                                               ; preds = %1
  %16 = load i32, i32* %3, align 4
  %17 = load i32, i32* @BTC_STORAGE_LINK_KEY_TYPE_STR, align 4
  %18 = call i32 @btc_config_remove(i32 %16, i32 %17)
  %19 = load i32, i32* %4, align 4
  %20 = and i32 %19, %18
  store i32 %20, i32* %4, align 4
  br label %21

21:                                               ; preds = %15, %1
  %22 = load i32, i32* %3, align 4
  %23 = load i32, i32* @BTC_STORAGE_PIN_LENGTH_STR, align 4
  %24 = call i64 @btc_config_exist(i32 %22, i32 %23)
  %25 = icmp ne i64 %24, 0
  br i1 %25, label %26, label %32

26:                                               ; preds = %21
  %27 = load i32, i32* %3, align 4
  %28 = load i32, i32* @BTC_STORAGE_PIN_LENGTH_STR, align 4
  %29 = call i32 @btc_config_remove(i32 %27, i32 %28)
  %30 = load i32, i32* %4, align 4
  %31 = and i32 %30, %29
  store i32 %31, i32* %4, align 4
  br label %32

32:                                               ; preds = %26, %21
  %33 = load i32, i32* %3, align 4
  %34 = load i32, i32* @BTC_STORAGE_LINK_KEY_STR, align 4
  %35 = call i64 @btc_config_exist(i32 %33, i32 %34)
  %36 = icmp ne i64 %35, 0
  br i1 %36, label %37, label %43

37:                                               ; preds = %32
  %38 = load i32, i32* %3, align 4
  %39 = load i32, i32* @BTC_STORAGE_LINK_KEY_STR, align 4
  %40 = call i32 @btc_config_remove(i32 %38, i32 %39)
  %41 = load i32, i32* %4, align 4
  %42 = and i32 %41, %40
  store i32 %42, i32* %4, align 4
  br label %43

43:                                               ; preds = %37, %32
  %44 = call i32 (...) @btc_config_flush()
  %45 = call i32 (...) @btc_config_unlock()
  %46 = load i32, i32* %4, align 4
  %47 = icmp ne i32 %46, 0
  br i1 %47, label %48, label %50

48:                                               ; preds = %43
  %49 = load i32, i32* @BT_STATUS_SUCCESS, align 4
  br label %52

50:                                               ; preds = %43
  %51 = load i32, i32* @BT_STATUS_FAIL, align 4
  br label %52

52:                                               ; preds = %50, %48
  %53 = phi i32 [ %49, %48 ], [ %51, %50 ]
  ret i32 %53
}

declare dso_local i32 @bdaddr_to_string(i32*, i32, i32) #1

declare dso_local i32 @BTC_TRACE_DEBUG(i8*, i32) #1

declare dso_local i32 @btc_config_lock(...) #1

declare dso_local i64 @btc_config_exist(i32, i32) #1

declare dso_local i32 @btc_config_remove(i32, i32) #1

declare dso_local i32 @btc_config_flush(...) #1

declare dso_local i32 @btc_config_unlock(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
